// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RecipeList /> Check component if there is no recipe 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <RecipeList
    handleEditRecipe={[Function]}
    handleRemoveRecipe={[Function]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": null,
    "nodeType": "host",
    "props": Object {
      "children": <ul>
        No recipes
      </ul>,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": null,
      "nodeType": "host",
      "props": Object {
        "children": "No recipes",
      },
      "ref": null,
      "rendered": "No recipes",
      "type": "ul",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": null,
      "nodeType": "host",
      "props": Object {
        "children": <ul>
          No recipes
        </ul>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": null,
        "nodeType": "host",
        "props": Object {
          "children": "No recipes",
        },
        "ref": null,
        "rendered": "No recipes",
        "type": "ul",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactFifteenAdapter {
      "options": Object {
        "supportPrevContextArgumentOfComponentDidUpdate": true,
      },
    },
  },
}
`;

exports[`<RecipeList /> Check if filtering list of recipes works correctly 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <RecipeList
    filterText="Tomato soup"
    handleEditRecipe={[Function]}
    handleRemoveRecipe={[Function]}
    recipes={
      Array [
        Object {
          "avatarURL": "",
          "desc": "Preparation time: 30min, Difficulty: 3/5",
          "dislikes": 4,
          "id": 1,
          "ingredients": Array [
            "one",
            "two",
            "three",
            "four",
            "five",
          ],
          "likes": 4,
          "procedure": Array [
            "step_one",
            "step_two",
            "step_three",
            "step_four",
            "step_five",
          ],
          "title": "Spaghetti",
        },
        Object {
          "avatarURL": "",
          "desc": "Preparation time: 20min, Difficulty: 2/5",
          "dislikes": 5,
          "id": 2,
          "ingredients": Array [
            "one",
            "two",
            "three",
            "four",
            "five",
          ],
          "likes": 5,
          "procedure": Array [
            "step_one",
            "step_two",
            "step_three",
            "step_four",
            "step_five",
          ],
          "title": "Tomato soup",
        },
      ]
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": null,
    "nodeType": "host",
    "props": Object {
      "children": <ul>
        <li>
          <Recipe
            avatarURL=""
            desc="Preparation time: 20min, Difficulty: 2/5"
            dislikes={5}
            handleEditRecipe={[Function]}
            handleRemoveRecipe={[Function]}
            id={2}
            ingredients={
              Array [
                "one",
                "two",
                "three",
                "four",
                "five",
              ]
            }
            likes={5}
            procedure={
              Array [
                "step_one",
                "step_two",
                "step_three",
                "step_four",
                "step_five",
              ]
            }
            title="Tomato soup"
          />
        </li>
      </ul>,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": null,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <li>
            <Recipe
              avatarURL=""
              desc="Preparation time: 20min, Difficulty: 2/5"
              dislikes={5}
              handleEditRecipe={[Function]}
              handleRemoveRecipe={[Function]}
              id={2}
              ingredients={
                Array [
                  "one",
                  "two",
                  "three",
                  "four",
                  "five",
                ]
              }
              likes={5}
              procedure={
                Array [
                  "step_one",
                  "step_two",
                  "step_three",
                  "step_four",
                  "step_five",
                ]
              }
              title="Tomato soup"
            />
          </li>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": "1",
          "nodeType": "host",
          "props": Object {
            "children": <Recipe
              avatarURL=""
              desc="Preparation time: 20min, Difficulty: 2/5"
              dislikes={5}
              handleEditRecipe={[Function]}
              handleRemoveRecipe={[Function]}
              id={2}
              ingredients={
                Array [
                  "one",
                  "two",
                  "three",
                  "four",
                  "five",
                ]
              }
              likes={5}
              procedure={
                Array [
                  "step_one",
                  "step_two",
                  "step_three",
                  "step_four",
                  "step_five",
                ]
              }
              title="Tomato soup"
            />,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": null,
            "nodeType": "class",
            "props": Object {
              "avatarURL": "",
              "desc": "Preparation time: 20min, Difficulty: 2/5",
              "dislikes": 5,
              "handleEditRecipe": [Function],
              "handleRemoveRecipe": [Function],
              "id": 2,
              "ingredients": Array [
                "one",
                "two",
                "three",
                "four",
                "five",
              ],
              "likes": 5,
              "procedure": Array [
                "step_one",
                "step_two",
                "step_three",
                "step_four",
                "step_five",
              ],
              "title": "Tomato soup",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": "li",
        },
      ],
      "type": "ul",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": null,
      "nodeType": "host",
      "props": Object {
        "children": <ul>
          <li>
            <Recipe
              avatarURL=""
              desc="Preparation time: 20min, Difficulty: 2/5"
              dislikes={5}
              handleEditRecipe={[Function]}
              handleRemoveRecipe={[Function]}
              id={2}
              ingredients={
                Array [
                  "one",
                  "two",
                  "three",
                  "four",
                  "five",
                ]
              }
              likes={5}
              procedure={
                Array [
                  "step_one",
                  "step_two",
                  "step_three",
                  "step_four",
                  "step_five",
                ]
              }
              title="Tomato soup"
            />
          </li>
        </ul>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": null,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <li>
              <Recipe
                avatarURL=""
                desc="Preparation time: 20min, Difficulty: 2/5"
                dislikes={5}
                handleEditRecipe={[Function]}
                handleRemoveRecipe={[Function]}
                id={2}
                ingredients={
                  Array [
                    "one",
                    "two",
                    "three",
                    "four",
                    "five",
                  ]
                }
                likes={5}
                procedure={
                  Array [
                    "step_one",
                    "step_two",
                    "step_three",
                    "step_four",
                    "step_five",
                  ]
                }
                title="Tomato soup"
              />
            </li>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": "1",
            "nodeType": "host",
            "props": Object {
              "children": <Recipe
                avatarURL=""
                desc="Preparation time: 20min, Difficulty: 2/5"
                dislikes={5}
                handleEditRecipe={[Function]}
                handleRemoveRecipe={[Function]}
                id={2}
                ingredients={
                  Array [
                    "one",
                    "two",
                    "three",
                    "four",
                    "five",
                  ]
                }
                likes={5}
                procedure={
                  Array [
                    "step_one",
                    "step_two",
                    "step_three",
                    "step_four",
                    "step_five",
                  ]
                }
                title="Tomato soup"
              />,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": null,
              "nodeType": "class",
              "props": Object {
                "avatarURL": "",
                "desc": "Preparation time: 20min, Difficulty: 2/5",
                "dislikes": 5,
                "handleEditRecipe": [Function],
                "handleRemoveRecipe": [Function],
                "id": 2,
                "ingredients": Array [
                  "one",
                  "two",
                  "three",
                  "four",
                  "five",
                ],
                "likes": 5,
                "procedure": Array [
                  "step_one",
                  "step_two",
                  "step_three",
                  "step_four",
                  "step_five",
                ],
                "title": "Tomato soup",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": "li",
          },
        ],
        "type": "ul",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactFifteenAdapter {
      "options": Object {
        "supportPrevContextArgumentOfComponentDidUpdate": true,
      },
    },
  },
}
`;

exports[`<RecipeList /> Check if rendering recipes works correctly 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <RecipeList
    filterText=""
    handleEditRecipe={[Function]}
    handleRemoveRecipe={[Function]}
    recipes={
      Array [
        Object {
          "avatarURL": "",
          "desc": "Preparation time: 30min, Difficulty: 3/5",
          "dislikes": 4,
          "id": 1,
          "ingredients": Array [
            "one",
            "two",
            "three",
            "four",
            "five",
          ],
          "likes": 4,
          "procedure": Array [
            "step_one",
            "step_two",
            "step_three",
            "step_four",
            "step_five",
          ],
          "title": "Spaghetti",
        },
        Object {
          "avatarURL": "",
          "desc": "Preparation time: 20min, Difficulty: 2/5",
          "dislikes": 5,
          "id": 2,
          "ingredients": Array [
            "one",
            "two",
            "three",
            "four",
            "five",
          ],
          "likes": 5,
          "procedure": Array [
            "step_one",
            "step_two",
            "step_three",
            "step_four",
            "step_five",
          ],
          "title": "Tomato soup",
        },
      ]
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": null,
    "nodeType": "host",
    "props": Object {
      "children": <ul>
        <li>
          <Recipe
            avatarURL=""
            desc="Preparation time: 30min, Difficulty: 3/5"
            dislikes={4}
            handleEditRecipe={[Function]}
            handleRemoveRecipe={[Function]}
            id={1}
            ingredients={
              Array [
                "one",
                "two",
                "three",
                "four",
                "five",
              ]
            }
            likes={4}
            procedure={
              Array [
                "step_one",
                "step_two",
                "step_three",
                "step_four",
                "step_five",
              ]
            }
            title="Spaghetti"
          />
        </li>
        <li>
          <Recipe
            avatarURL=""
            desc="Preparation time: 20min, Difficulty: 2/5"
            dislikes={5}
            handleEditRecipe={[Function]}
            handleRemoveRecipe={[Function]}
            id={2}
            ingredients={
              Array [
                "one",
                "two",
                "three",
                "four",
                "five",
              ]
            }
            likes={5}
            procedure={
              Array [
                "step_one",
                "step_two",
                "step_three",
                "step_four",
                "step_five",
              ]
            }
            title="Tomato soup"
          />
        </li>
      </ul>,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": null,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <li>
            <Recipe
              avatarURL=""
              desc="Preparation time: 30min, Difficulty: 3/5"
              dislikes={4}
              handleEditRecipe={[Function]}
              handleRemoveRecipe={[Function]}
              id={1}
              ingredients={
                Array [
                  "one",
                  "two",
                  "three",
                  "four",
                  "five",
                ]
              }
              likes={4}
              procedure={
                Array [
                  "step_one",
                  "step_two",
                  "step_three",
                  "step_four",
                  "step_five",
                ]
              }
              title="Spaghetti"
            />
          </li>,
          <li>
            <Recipe
              avatarURL=""
              desc="Preparation time: 20min, Difficulty: 2/5"
              dislikes={5}
              handleEditRecipe={[Function]}
              handleRemoveRecipe={[Function]}
              id={2}
              ingredients={
                Array [
                  "one",
                  "two",
                  "three",
                  "four",
                  "five",
                ]
              }
              likes={5}
              procedure={
                Array [
                  "step_one",
                  "step_two",
                  "step_three",
                  "step_four",
                  "step_five",
                ]
              }
              title="Tomato soup"
            />
          </li>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": "0",
          "nodeType": "host",
          "props": Object {
            "children": <Recipe
              avatarURL=""
              desc="Preparation time: 30min, Difficulty: 3/5"
              dislikes={4}
              handleEditRecipe={[Function]}
              handleRemoveRecipe={[Function]}
              id={1}
              ingredients={
                Array [
                  "one",
                  "two",
                  "three",
                  "four",
                  "five",
                ]
              }
              likes={4}
              procedure={
                Array [
                  "step_one",
                  "step_two",
                  "step_three",
                  "step_four",
                  "step_five",
                ]
              }
              title="Spaghetti"
            />,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": null,
            "nodeType": "class",
            "props": Object {
              "avatarURL": "",
              "desc": "Preparation time: 30min, Difficulty: 3/5",
              "dislikes": 4,
              "handleEditRecipe": [Function],
              "handleRemoveRecipe": [Function],
              "id": 1,
              "ingredients": Array [
                "one",
                "two",
                "three",
                "four",
                "five",
              ],
              "likes": 4,
              "procedure": Array [
                "step_one",
                "step_two",
                "step_three",
                "step_four",
                "step_five",
              ],
              "title": "Spaghetti",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": "li",
        },
        Object {
          "instance": null,
          "key": "1",
          "nodeType": "host",
          "props": Object {
            "children": <Recipe
              avatarURL=""
              desc="Preparation time: 20min, Difficulty: 2/5"
              dislikes={5}
              handleEditRecipe={[Function]}
              handleRemoveRecipe={[Function]}
              id={2}
              ingredients={
                Array [
                  "one",
                  "two",
                  "three",
                  "four",
                  "five",
                ]
              }
              likes={5}
              procedure={
                Array [
                  "step_one",
                  "step_two",
                  "step_three",
                  "step_four",
                  "step_five",
                ]
              }
              title="Tomato soup"
            />,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": null,
            "nodeType": "class",
            "props": Object {
              "avatarURL": "",
              "desc": "Preparation time: 20min, Difficulty: 2/5",
              "dislikes": 5,
              "handleEditRecipe": [Function],
              "handleRemoveRecipe": [Function],
              "id": 2,
              "ingredients": Array [
                "one",
                "two",
                "three",
                "four",
                "five",
              ],
              "likes": 5,
              "procedure": Array [
                "step_one",
                "step_two",
                "step_three",
                "step_four",
                "step_five",
              ],
              "title": "Tomato soup",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": "li",
        },
      ],
      "type": "ul",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": null,
      "nodeType": "host",
      "props": Object {
        "children": <ul>
          <li>
            <Recipe
              avatarURL=""
              desc="Preparation time: 30min, Difficulty: 3/5"
              dislikes={4}
              handleEditRecipe={[Function]}
              handleRemoveRecipe={[Function]}
              id={1}
              ingredients={
                Array [
                  "one",
                  "two",
                  "three",
                  "four",
                  "five",
                ]
              }
              likes={4}
              procedure={
                Array [
                  "step_one",
                  "step_two",
                  "step_three",
                  "step_four",
                  "step_five",
                ]
              }
              title="Spaghetti"
            />
          </li>
          <li>
            <Recipe
              avatarURL=""
              desc="Preparation time: 20min, Difficulty: 2/5"
              dislikes={5}
              handleEditRecipe={[Function]}
              handleRemoveRecipe={[Function]}
              id={2}
              ingredients={
                Array [
                  "one",
                  "two",
                  "three",
                  "four",
                  "five",
                ]
              }
              likes={5}
              procedure={
                Array [
                  "step_one",
                  "step_two",
                  "step_three",
                  "step_four",
                  "step_five",
                ]
              }
              title="Tomato soup"
            />
          </li>
        </ul>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": null,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <li>
              <Recipe
                avatarURL=""
                desc="Preparation time: 30min, Difficulty: 3/5"
                dislikes={4}
                handleEditRecipe={[Function]}
                handleRemoveRecipe={[Function]}
                id={1}
                ingredients={
                  Array [
                    "one",
                    "two",
                    "three",
                    "four",
                    "five",
                  ]
                }
                likes={4}
                procedure={
                  Array [
                    "step_one",
                    "step_two",
                    "step_three",
                    "step_four",
                    "step_five",
                  ]
                }
                title="Spaghetti"
              />
            </li>,
            <li>
              <Recipe
                avatarURL=""
                desc="Preparation time: 20min, Difficulty: 2/5"
                dislikes={5}
                handleEditRecipe={[Function]}
                handleRemoveRecipe={[Function]}
                id={2}
                ingredients={
                  Array [
                    "one",
                    "two",
                    "three",
                    "four",
                    "five",
                  ]
                }
                likes={5}
                procedure={
                  Array [
                    "step_one",
                    "step_two",
                    "step_three",
                    "step_four",
                    "step_five",
                  ]
                }
                title="Tomato soup"
              />
            </li>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": "0",
            "nodeType": "host",
            "props": Object {
              "children": <Recipe
                avatarURL=""
                desc="Preparation time: 30min, Difficulty: 3/5"
                dislikes={4}
                handleEditRecipe={[Function]}
                handleRemoveRecipe={[Function]}
                id={1}
                ingredients={
                  Array [
                    "one",
                    "two",
                    "three",
                    "four",
                    "five",
                  ]
                }
                likes={4}
                procedure={
                  Array [
                    "step_one",
                    "step_two",
                    "step_three",
                    "step_four",
                    "step_five",
                  ]
                }
                title="Spaghetti"
              />,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": null,
              "nodeType": "class",
              "props": Object {
                "avatarURL": "",
                "desc": "Preparation time: 30min, Difficulty: 3/5",
                "dislikes": 4,
                "handleEditRecipe": [Function],
                "handleRemoveRecipe": [Function],
                "id": 1,
                "ingredients": Array [
                  "one",
                  "two",
                  "three",
                  "four",
                  "five",
                ],
                "likes": 4,
                "procedure": Array [
                  "step_one",
                  "step_two",
                  "step_three",
                  "step_four",
                  "step_five",
                ],
                "title": "Spaghetti",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": "li",
          },
          Object {
            "instance": null,
            "key": "1",
            "nodeType": "host",
            "props": Object {
              "children": <Recipe
                avatarURL=""
                desc="Preparation time: 20min, Difficulty: 2/5"
                dislikes={5}
                handleEditRecipe={[Function]}
                handleRemoveRecipe={[Function]}
                id={2}
                ingredients={
                  Array [
                    "one",
                    "two",
                    "three",
                    "four",
                    "five",
                  ]
                }
                likes={5}
                procedure={
                  Array [
                    "step_one",
                    "step_two",
                    "step_three",
                    "step_four",
                    "step_five",
                  ]
                }
                title="Tomato soup"
              />,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": null,
              "nodeType": "class",
              "props": Object {
                "avatarURL": "",
                "desc": "Preparation time: 20min, Difficulty: 2/5",
                "dislikes": 5,
                "handleEditRecipe": [Function],
                "handleRemoveRecipe": [Function],
                "id": 2,
                "ingredients": Array [
                  "one",
                  "two",
                  "three",
                  "four",
                  "five",
                ],
                "likes": 5,
                "procedure": Array [
                  "step_one",
                  "step_two",
                  "step_three",
                  "step_four",
                  "step_five",
                ],
                "title": "Tomato soup",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": "li",
          },
        ],
        "type": "ul",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactFifteenAdapter {
      "options": Object {
        "supportPrevContextArgumentOfComponentDidUpdate": true,
      },
    },
  },
}
`;
